--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p class="hero__anime-text">explore project</p>
           </div>
           <div class="hero__icons">
-            <i class='hero__arrow bx bx-right-arrow-alt'></i>
+            <button class="hero__btn"><i class='hero__arrow bx bx-right-arrow-alt'></i></button>
             <i class='hero__arrow bx bx-left-arrow-alt'></i>
           </div>
         </div>
@@ -325,13 +325,12 @@
           <h3 class="design__title">Cultural centre</h3>
           <p class="design__text">LANDSCAPE</p>
         </div>
-
       </div>
     </div>
   </section>
 
   <section class="offices">
-    <div class="container">
+    <div class="container__map">
       <div class="map row middle between">
         <div class="map__img">
           <a href="#">
